# pictorus-rs

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  DEVELOPMENT.md  LICENSE  README.md  deny.toml  v2_Integration.md
.github/: CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci-tests.yaml
block-data/: Cargo.toml
block-data/src/: block_ops.rs  lib.rs
pictorus-block-data/: Cargo.toml  README.md
pictorus-block-data/src/: lib.rs
pictorus-blocks/: Cargo.toml  README.md  block-impl-notes.md
pictorus-blocks/src/: byte_data.rs  lib.rs  matrix_ext.rs  nalgebra_interop.rs  stale_tracker.rs  testing.rs  traits.rs
pictorus-blocks/src/alloc_blocks/: bytes_join_block.rs  bytes_pack_block.rs  bytes_split_block.rs  bytes_unpack_block.rs  can_transmit_block.rs  i2c_input_block.rs  i2c_output_block.rs  json_dump_block.rs  json_load_block.rs  mod.rs  serial_receive_block.rs  serial_transmit_block.rs  spi_receive_block.rs  switch_block.rs
pictorus-blocks/src/core_blocks/: abs_block.rs  adc_block.rs  aggregate_block.rs  app_time_block.rs  arg_min_max_block.rs  bias_block.rs  bit_shift_block.rs  bitwise_operator_block.rs  bytes_join_block.rs  bytes_literal_block.rs  bytes_pack_block.rs  bytes_split_block.rs  bytes_unpack_block.rs  can_receive_block.rs  can_transmit_block.rs  change_detection_block.rs  clamp_block.rs  compare_to_value_block.rs  comparison_block.rs  constant_block.rs  counter_block.rs  cross_product_block.rs  dac_block.rs  deadband_block.rs  delay_block.rs  delay_control_block.rs  derivative_block.rs  determinant_block.rs  dot_product_block.rs  exponent_block.rs  fix_non_finite_block.rs  frequency_filter_block.rs  gain_block.rs  gpio_output_block.rs  i2c_input_block.rs  i2c_output_block.rs  iir_filter_block.rs  integral_block.rs  json_dump_block.rs  json_load_block.rs  (+40 more)
pictorus-blocks/src/core_blocks/product_block/: component.rs  matrix.rs
pictorus-blocks/src/std_blocks/: fft_block.rs  fmu_block.rs  mod.rs  system_time_block.rs  udp_receive_block.rs  udp_transmit_block.rs
pictorus-blocks/src/traits/: serialize.rs
pictorus-embedded/: Cargo.toml  README.md
pictorus-internal/: Cargo.toml  README.md
pictorus-internal/src/: execution_controller.rs  lib.rs  protocols.rs  runtime_context.rs  timing.rs  utils.rs
pictorus-internal/src/encoders/: mod.rs  postcard_encoder.rs
pictorus-internal/src/loggers/: csv_logger.rs  linux_logger.rs  mod.rs  rtt_logger.rs  std_logger.rs  udp_logger.rs
pictorus-internal/src/logging/: mod.rs  rprintlog.rs
pictorus-linux/: Cargo.toml  README.md
pictorus-linux/src/: can_protocol.rs  gpio_protocol.rs  i2c_protocol.rs  lib.rs  pwm_protocol.rs  serial_protocol.rs  spi_protocol.rs  udp_protocol.rs
pictorus-linux/src/pwm_protocol/: hard_pwm.rs  soft_pwm.rs
pictorus-px4/: Cargo.toml  README.md
pictorus-px4/examples/: quad_controller.rs  uorb.rs
pictorus-px4/src/: lib.rs  message_impls.rs  uorb_binding.rs
pictorus-renesas/: CHANGELOG.md  Cargo.toml  README.md
pictorus-renesas/src/: clock_protocols.rs  gpio_protocol.rs  i2c_protocol.rs  lib.rs
pictorus-sim/: CHANGELOG.md  Cargo.toml  README.md
pictorus-sim/src/: adc_protocol.rs  can_protocol.rs  clock_protocol.rs  dac_protocol.rs  gpio_protocol.rs  i2c_protocol.rs  lib.rs  pwm_protocol.rs  serial_protocol.rs  spi_protocol.rs  udp_protocol.rs  uorb_advertise_protocol.rs  uorb_subscribe_protocol.rs
pictorus-std/: Cargo.toml
pictorus-std/src/: lib.rs
pictorus-stm32/: CHANGELOG.md  Cargo.toml  README.md
pictorus-stm32/src/: adc_protocol.rs  can_protocol.rs  clock_protocol.rs  dac_protocol.rs  gpio_protocol.rs  i2c_protocol.rs  lib.rs  pwm_protocol.rs  serial_protocol.rs  spi_protocol.rs
pictorus-traits/: Cargo.toml  README.md
pictorus-traits/src/: custom_blocks.rs  flattened_backport.rs  lib.rs  tuple_array_interop.rs
px4-msgs-sys/: README.md  build.rs
px4-msgs-sys/c_api/uORB/: uORB.h
px4-msgs-sys/c_api/uORB/topics/: ackermann_velocity_setpoint.h  action_request.h  actuator_armed.h  actuator_controls_status.h  actuator_motors.h  actuator_outputs.h  actuator_servos.h  actuator_servos_trim.h  actuator_test.h  adc_report.h  airspeed.h  airspeed_validated.h  airspeed_wind.h  arming_check_request.h  autotune_attitude_control_status.h  battery_status.h  button_event.h  camera_capture.h  camera_status.h  camera_trigger.h  can_interface_status.h  cellular_status.h  collision_constraints.h  config_overrides.h  control_allocator_status.h  cpuload.h  dataman_request.h  dataman_response.h  debug_array.h  debug_key_value.h  debug_value.h  debug_vect.h  differential_pressure.h  differential_velocity_setpoint.h  distance_sensor.h  distance_sensor_mode_change_request.h  ekf2_timestamps.h  esc_report.h  estimator_aid_source1d.h  estimator_aid_source2d.h  (+183 more)
px4-msgs-sys/src/: message_defs.rs  orb.rs
px4-workspace/: README.md
px4-workspace/.cargo/: config.toml
px4-workspace/module-shim/src/: CMakeLists.txt
px4-workspace/module-shim/src/modules/pictorus_module/: CMakeLists.txt  module.yaml  pictorus.h  pictorus_module.cpp  pictorus_module.h  rust_interface.h
px4-workspace/pictorus-px4/: Cargo.toml
px4-workspace/pictorus-px4/examples/: ffi-example.rs  quad_controller.rs
px4-workspace/pictorus-px4/src/: ffi_protocol.rs  lib.rs  message_impls.rs
px4-workspace/px4-msgs-sys/: Cargo.toml
px4-workspace/px4-msgs-sys/c_api/uORB/topics/: ackermann_velocity_setpoint.h  action_request.h  actuator_armed.h  actuator_controls_status.h  actuator_motors.h  actuator_outputs.h  actuator_servos.h  actuator_servos_trim.h  actuator_test.h  adc_report.h  airspeed.h  airspeed_validated.h  airspeed_wind.h  arming_check_reply.h  arming_check_request.h  autotune_attitude_control_status.h  battery_status.h  button_event.h  (+208 more)
px4-workspace/px4-msgs-sys/src/: lib.rs  message_defs.rs  orb.rs
script/: setup
state-machine/: Cargo.toml  README.md
state-machine/examples/: audio_player.rs  composite.rs  corelib.rs  nested_drone.rs  parallel_children.rs  transition_inputs.rs
state-machine/src/: corelib_wrapper.rs  lib.rs  main.rs  process_block_adapter.rs
