[workspace]
members = [
  "pictorus-block-data",
  "pictorus-traits",
  "pictorus-blocks",
  "pictorus-internal",
  "pictorus-linux",
  "pictorus-sim",
  "pictorus-stm32",
]
# Exclude platform-specific crates from the default crates
default-members = [
  "pictorus-block-data",
  "pictorus-traits",
  "pictorus-blocks",
  "pictorus-internal",
]
resolver = "3"

[workspace.package]
license = "BUSL-1.1"
homepage = "https://www.pictor.us/"
repository = "https://github.com/Pictorus-Labs/pictorus-rs"
keywords = ["embedded", "modeling", "simulation", "fmi"]
categories = ["embedded", "hardware-support", "no-std"]
