[workspace]
members = [
  "pictorus-traits",
  "pictorus-blocks",
  "pictorus-internal",
  "pictorus-linux",
  "pictorus-sim",
  "pictorus-stm32",
  "pictorus-renesas",
  "pictorus-px4",
  "px4-msgs-sys",
  "state-machine",
]
# Exclude platform-specific crates from the default crates
default-members = [
  "pictorus-traits",
  "pictorus-blocks",
  "pictorus-internal",
]
resolver = "3"

[workspace.package]
license = "BUSL-1.1"
homepage = "https://www.pictor.us/"
repository = "https://github.com/Pictorus-Labs/pictorus-rs"
keywords = ["embedded", "modeling", "simulation", "fmi"]
categories = ["embedded", "hardware-support", "no-std"]

[patch.crates-io]
fmu-runner = { git = "https://github.com/Pictorus-Labs/fmu-runner-rs", branch = "main" }