[package]
edition = "2021"
name = "pictorus-blocks"
description = "Implementations of Pictorus blocks."
version = "0.0.0"
license.workspace = true
license-file.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
heapless = "0.8.0"
nalgebra = { version = "0.33.2", default-features = false }
num-traits = { version = "0.2.19", default-features = false, features = [
  "libm",
] }
pictorus-block-data = { path = "../pictorus-block-data", version = "0.0.0" }
pictorus-traits = { path = "../pictorus-traits", version = "0.0.0" }
embedded-can = "0.4.1"
rand = { version = "0.8.5", default-features = false, features = ["small_rng"] }
rand_distr = { version = "0.4.3", default-features = false }
strum = { version = "0.25.0", default-features = false, features = ["derive"] }
miniserde = { version = "0.1.42", default-features = false }
paste = "1.0.15"
log = "0.4.21"
byteorder = { version = "1.5.0", default-features = false }
seq-macro = "0.3.6"
embedded-time = "0.12.1"

# Std-only dependencies
rustfft = { version = "6.2.0", default-features = false, optional = true }
chrono = { version = "0.4.40", default-features = false, features = [
  "now",
  "clock",
], optional = true }


[target.'cfg(target_arch = "x86_64")'.dependencies]
fmu-runner = "0.4.3"

[dev-dependencies]
bitvec = { version = "1.0", default-features = false }
approx = "0.5.1"
rstest = "0.23"
byteorder = { version = "1.5.0", features = ["std"] }
derive-new = { version = "0.7.0", default-features = false }

[features]
std = ["dep:rustfft", "dep:chrono"]
