[package]
name = "pictorus-internal"
edition = "2024"
description = "Utilities used by generated code in Pictorus."
version = "0.0.0"
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
pictorus-traits = { path = "../pictorus-traits", version = "0.0.0" }
pictorus-block-data = { path = "../pictorus-block-data", version = "0.0.0" }
embedded-hal = "1.0.0"
embedded-hal-02 = { package = "embedded-hal", version = "0.2.6", features = [
  "unproven",
] }
embedded-io = "0.6.1"
embedded-time = "0.12.1"
num-traits = { version = "0.2.19", default-features = false, features = [
  "libm",
] }
log = "0.4.21"
cfg-if = "1.0.0"
embedded-can = "0.4.1"
nb = "1.1.0"
chrono = { version = "0.4.40", optional = true }
env_logger = { version = "0.11.8", optional = true }
rtt-target = { git = "https://github.com/Pictorus-Labs/rtt-target", branch = "alignment-fix", optional = true }
postcard = { version = "1.1.1" }
serde = { version = "1.0.219", default-features = false, features = ["derive", "alloc"]}
serde_json = { version = "1.0", default-features = false, features = ["alloc"], optional = true }
heapless = { version = "0.7.0" }

[dev-dependencies]
temp-env = "0.3"
cobs = "0.4.0"

[features]
std = ["serde/std", "dep:env_logger", "dep:chrono", "dep:serde_json"]
rtt = ["dep:rtt-target"]
