[package]
name = "pictorus-linux"
edition = "2024"
description = "Linux implementations of Pictorus traits."
version = "0.0.0"
license-file.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
pictorus-blocks = { path = "../pictorus-blocks", version = "0.0.0" }
pictorus-traits = { path = "../pictorus-traits", version = "0.0.0" }
pictorus-internal = { path = "../pictorus-internal", version = "0.0.0", features = [
  "std",
] }
embedded-hal = "1.0.0"
embedded-hal-02 = { package = "embedded-hal", version = "0.2.6", features = [
  "unproven",
] }
embedded-can = "0.4.1"
embedded-io = { version = "0.6.1", features = ["std"] }
nb = "1.1.0"
log = "0.4.21"
std-embedded-time = "0.1.0"
linux-embedded-hal = "0.4.0"
sysfs-pwm = "0.1.0"
serialport = "4.3.0"
socketcan = "3.3.0"
libc = "0.2.153"
