[package]
name = "pictorus-renesas"
version = "0.0.0"
edition = "2024"
description = "Renesas implementations of Pictorus traits."
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
pictorus-blocks = { path = "../pictorus-blocks", version = "0.0.0" }
pictorus-traits = { path = "../pictorus-traits", version = "0.0.0" }
pictorus-internal = { path = "../pictorus-internal", version = "0.0.0" }
embedded-time = "0.12.1"
embedded-hal = "1.0.0"
embedded-io = "0.6.1"
embassy-time = { git = "https://github.com/embassy-rs/embassy.git", rev = "0e82b7d" }
heapless = "0.8.0"
log = "0.4.21"
ra4m2-hal = { git = "https://github.com/Pictorus-Labs/ra4m2-hal", rev = "45ad122" }
