[package]
name = "pictorus-sim"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
pictorus-blocks = { path = "../pictorus-blocks" }
pictorus-traits = { path = "../pictorus-traits" }
pictorus-internal = { path = "../pictorus-internal", features = ["std"] }
embedded-time = "0.12.1"
embedded-hal = "1.0.0"
embedded-hal-02 = { package = "embedded-hal", version = "0.2.6", features = [
  "unproven",
] }
embedded-can = "0.4.1"
embedded-io = "0.6.1"
nb = "1.1.0"
