[package]
name = "pictorus-sim"
edition = "2024"
description = "Sim implementation of Pictorus traits."
version = "0.0.0"
license-file.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
pictorus-blocks = { path = "../pictorus-blocks", version = "0.0.0" }
pictorus-traits = { path = "../pictorus-traits", version = "0.0.0" }
pictorus-internal = { path = "../pictorus-internal", version = "0.0.0", features = [
  "std",
] }
embedded-time = "0.12.1"
embedded-hal = "1.0.0"
embedded-hal-02 = { package = "embedded-hal", version = "0.2.6", features = [
  "unproven",
] }
embedded-can = "0.4.1"
embedded-io = "0.6.1"
nb = "1.1.0"
