[package]
name = "pictorus-stm32"
edition = "2024"
description = "STM32 implementations of Pictorus traits."
version = "0.0.0"
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
pictorus-blocks = { path = "../pictorus-blocks", version = "0.0.0" }
pictorus-traits = { path = "../pictorus-traits", version = "0.0.0" }
pictorus-internal = { path = "../pictorus-internal", version = "0.0.0" }
embedded-time = "0.12.1"
embedded-hal = "1.0.0"
embedded-hal-02 = { package = "embedded-hal", version = "0.2.6", features = [
  "unproven",
] }
embedded-io = "0.6.1"
embassy-futures = { git = "https://github.com/embassy-rs/embassy.git", rev = "68c8238" }
embassy-stm32 = { git = "https://github.com/embassy-rs/embassy.git", rev = "68c8238" }
embassy-time = { git = "https://github.com/embassy-rs/embassy.git", rev = "68c8238" }
embedded-io-async = "0.6.1"
heapless = "0.8.0"
embedded-can = { version = "0.4.1", optional = true }
nb = { version = "1.1.0", optional = true }
log = "0.4.21"

[features]
# Enables protocols that allocate on the heap (i2c, serial, can). Without it, only the alloc-free
# protocols (clock, pwm, spi, dac, adc, gpio) are compiled. Forwards alloc to the pictorus path
# deps so they don't get re-enabled via their own defaults.
alloc = ["pictorus-blocks/alloc", "pictorus-internal/alloc"]
fdcan = ["alloc", "dep:embedded-can", "dep:nb"]
can = ["alloc", "dep:embedded-can", "dep:nb"]
# spi_protocol uses SpiReceiveBlockParams which lives in pictorus-blocks/alloc_blocks.
# Once SpiReceiveBlock's Parameters struct is moved into core_blocks, "alloc" can be removed.
spi = ["alloc"]
dac = []
adc = []
interrupt-uart = []
# These are only intended to simplify tests. The can and fdcan features are mutually
# exclusive, and the interrupt-uart flag toggles between 2 implementations of UART. This is
# unavoidable due to the way embassy-stm32 generates its HAL. Depending on the target,
# only certain structs are included in the generated code, so trying to include both CAN impls
# or both UART impls will result in a compile error. In addition, the embassy-stm32 crate
# needs a target set or it will fail to compile. This means we cannot build this crate
# with the --all-features flag. Instead, tooling can run both `cargo check --features _std_can_std_uart`
# and `cargo check --features _fdcan_interrupt_uart` to test all the options.
_core_protos = ["spi", "dac", "adc"]
_std_can_std_uart = ["embassy-stm32/stm32f429zi", "can"]
_fdcan_interrupt_uart = ["embassy-stm32/stm32u5a5zj", "fdcan", "interrupt-uart"]
