[package]
edition = "2024"
name = "state-machine"
description = "A state machine implementation for Pictorus."
version = "0.0.0"
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
enum-map = "2.7.3"
pictorus-traits = { path = "../pictorus-traits" }

[dev-dependencies]
strum = { version = "0.28.0", default-features = false, features = ["derive"] }
